# appliq

./: .gitignore  Cargo.toml  Dockerfile  ReadMe.MD  compose.yml  docker-compose.yml
db/migrations/: 01__create_user_table.sql  02__create_application_tables_and_views.sql  03__alter_application_table_make_application_type_nullable.sql  04__create_table_tokens.sql  05__alter_user_table_add_phone_number_field.sql
resources/templates/emails/: password_reset.html
src/: main.rs
src/configs/: api_doc.rs  database.rs  mod.rs  router.rs  routes.rs
src/enums/: application.rs  mod.rs  roles.rs
src/errors/: api_error.rs  app_error.rs  mod.rs
src/handlers/: application_handler.rs  auth_handler.rs  dashboard_handler.rs  mod.rs  user_handler.rs
src/middlewares/: jwt_claims_extractor.rs  mod.rs
src/models/: application.rs  auth.rs  mod.rs  token.rs  user.rs
src/payloads/: application.rs  auth.rs  dashboard.rs  mod.rs  pagination.rs  user.rs
src/repositories/: application_repository.rs  mod.rs  token_repository.rs  user_repository.rs
src/services/: application_service.rs  auth_service.rs  dashboard_service.rs  email_service.rs  mod.rs  user_service.rs
src/utils/: api_response.rs  custom_formatter.rs  date_util.rs  email_util.rs  jwt.rs  mod.rs  validator_util.rs
