[package]
name = "appliq"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "migrate","chrono"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
dotenvy = "0.15.7"
chrono = { version = "0.4.34", features = ["serde", "clock"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.196", features = ["derive"] }
bcrypt = "0.17.0"
validator = { version = "0.20.0", features = ["derive"] }
owo-colors = "4.2.0"
thiserror = "2.0.12"
http = "1.3.1"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
axum-macros = "0.5.0"
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.16.0", features = ["v4"] }
lettre = "0.11.15"
log = "0.4.27"
tera = "1.20.0"
lazy_static = "1.5.0"
regex = "1.11.1"